--- a/sass/px-time-input-sketch.scss
+++ b/sass/px-time-input-sketch.scss
@@ -55,7 +55,7 @@ $inuit-enable-validation-states : true;
 .time-input__field__input {
   @include inuit-font-size(30px,30px);
   width: 5.2em;
-  height: calculateRem(30px);
+  //height: calculateRem(30px);
   font-family: var(--px-font-family);
 }
 
